<resources>
    <string name="app_name">Currency Rate</string>
    <string name="title_central_bank">Central Bank</string>
    <string name="title_other">Other</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency">CURRENCY</string>
    <string name="currency_short">USD</string>
    <string name="foreign_amt">100</string>
    <string name="dollar">1528,1</string>
    <string name="foreign">Country</string>
    <string name="exchange_rate">Exchange Rates</string>
    <string name="today_exchange">Today Exchange Rate</string>
    <string name="amount">Amount</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="converter">Converter</string>
    <string name="myanmar">Myanmar</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="del">x</string>
    <string name="myanmar_unit">MMK</string>
    <string name="last_updated">Last updated :</string>
    <string name="central_bank">Central Bank of Myanmar</string>
    <string name="updated_time">2019&#8211;09&#8211;17 14:30:00 PM</string>
    <string name="no_internet">No internet connection.\n Check your network.</string>
    <string name="no_data">Cannot load data. Try Again!</string>
    <string name="title_cb">CB Bank</string>
    <string name="title_kbz">KBZ Bank</string>
    <string name="title_aya">AYA Bank</string>
    <string name="title_share">Share</string>
    <string name="title_about">About</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
</resources>
