<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="1dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exchange_layout_bg"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/currency"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:gravity="center|start"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:text="@string/currency_short"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/buyRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="15dp"
                android:text="@string/dollar"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="15dp"
                android:text="@string/myanmar_unit"
                android:textSize="@dimen/font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sellRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="15dp"
                android:text="@string/dollar"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="15dp"
                android:text="@string/myanmar_unit"
                android:textSize="@dimen/font_size" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>